# aura

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: DEPLOYING.md  serde-naming-fix.md  streaming-playback.md  track-list-views.md
scripts/: patch-ios-icons.mjs
server/: tsconfig.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  media_controls.rs  sync.rs
src-tauri/src/audio/: mod.rs  queue.rs  streaming.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/music_assistant/: client.rs  models.rs
src-tauri/src/subsonic/: client.rs  models.rs
src/components/: UpdateBanner.tsx
src/components/Agent/: AgentChat.tsx
src/components/ContextMenu/: ContextMenu.tsx
src/components/Player/: OutputSelector.tsx  PlayerBar.tsx
src/components/Playlist/: PlaylistsView.tsx
src/components/Queue/: QueuePanel.tsx
src/hooks/: useKeyboardNav.ts  useSearch.ts  useTiltHover.ts  useUpdater.ts
src/lib/: agentLoop.ts  agentTools.ts  flatSong.ts  models.ts  tauri.ts
src/stores/: agentChatStore.ts  commandPaletteStore.ts  contextMenuStore.ts  libraryStore.ts  playerStore.ts  settingsStore.ts  themeStore.ts  trackTargetStore.ts  usageStore.ts
src/themes/: aura-light.ts  bloodmoon.ts  catppuccin.ts  cyberdeck.ts  cybertruck.ts  espresso.ts  index.ts  itunes-classic.ts  matrix.ts  midnight.ts  nord.ts  phosphor.ts  sahara.ts  vaporwave.ts  winamp.ts  y2k.ts
(+8 files in other folders)
