[package]
name = "aura"
version = "0.1.0"
description = "A blazingly fast Navidrome/Subsonic desktop music player"
authors = ["Aura Contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "aura_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
rodio = { version = "0.22", features = ["symphonia-all"] }
souvlaki = "0.8"
md-5 = "0.10"
hex = "0.4"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
parking_lot = "0.12"
base64 = "0.22"
bytes = "1"
futures-util = "0.3"
tempfile = "3"
url = "2"
chrono = "0.4"
